2010-09-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/main.c (main): Reinit LVM and RAID.
	* util/grub-probe.c (main): Likewise.
	* util/i386/pc/grub-setup.c (main): Likewise.
	* util/sparc64/ieee1275/grub-setup.c (main): Likewise.
	Reported and debugged by: alexxy

2010-09-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/lvm.c (grub_lvm_scan_device) [GRUB_UTIL]: Output more
	diagnostic info.

2010-09-05  Jo Shields <directhex@apebox.org>

	* util/grub.d/30_os-prober.in: Add missing classes.

2010-09-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi (Theme file format): Document new position format.

2010-09-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi (Theme file format): Replace Box_slice_names.png with
	a table. Use @code instead of @verbatim.

2010-09-05  Colin D Bennett  <colin@gibibit.com>

	Gfxmenu documentation.

	* docs/grub.texi (Theme file format): New chapter.

2010-09-05  Szymon Janc <szymon@janc.net.pl>

	* grub-core/Makefile.core.def (xzio): New module.
	* grub-core/io/xzio.c: New file.
	* grub-core/lib/xzembed/xz.h: New file (from xembed).
	* grub-core/lib/xzembed/xz_config.h: Likewise.
	* grub-core/lib/xzembed/xz_dec_bcj.c: Likewise.
	* grub-core/lib/xzembed/xz_dec_lzma2.c: Likewise.
	* grub-core/lib/xzembed/xz_dec_stream.c: Likewise.
	* grub-core/lib/xzembed/xz_lzma2.h: Likewise.
	* grub-core/lib/xzembed/xz_private.h: Likewise.
	* grub-core/lib/xzembed/xz_stream.h: Likewise.
	* include/grub/file.h (grub_file_filter_id): New compression filter
	GRUB_FILE_FILTER_XZIO.

2010-09-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/file.h (GRUB_FILE_SIZE_UNKNOWN): New definition.
	* grub-core/disk/loopback.c (grub_loopback_open): Handle unknown file
	size.

2010-09-05  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/err.h (grub_err_t): Replace GRUB_ERR_BAD_GZIP_DATA with
	GRUB_ERR_BAD_COMPRESSED_DATA. All users updated.
